# my-blog

./: .gitignore  README.md  commands-used.tmp  index.html  nav-units.html  post_Ipsum Lorem.html  push-site.tmp  pyproject.toml  style.css
cms/: build_site.py  generate_page.py
docs/: nav-units.html  style.css
lists/: main.list  main.yaml  metalist.xsd  post.list  site.mlist  site.xml
posts/: initial-post.md  post_Ipsum Lorem.html  template.html
site/: index.html  nav-units.html
site/posts/: post_Ipsum Lorem.html
templates/: ads.html  big-header.html  footer.html  head-main.html  head.html  index.list  main.html  nav-single.html  nav.html  small-header.html
