[tool.poetry]
name = "my-blog"
version = "0.1.0"
description = ""
authors = ["agvantibo <apicalium@gmail.com>"]

[tool.poetry.dependencies]
python = "*"
click = "*"
Markdown = "*"
htmlmin = "*"
html5print = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
